<resources>
    <string name="app_name">pandroid</string>
    <!-- Common -->
    <string name="load_rom">Load ROM</string>
    <string name="games">Games</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="unknown">Unknown</string>
    <!-- Input Settings -->
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="others">Others</string>
    <string name="press_any_key">Press any key</string>
    <string name="axis">Axis</string>
    <string name="dead_zone">Dead zone</string>
    <string name="options">Options</string>
    <string name="pref_input_map_summary">Map physical controller or keyboard</string>
    <string name="controller_mapping">Controller mapping</string>
    <string name="saved">Saved</string>
    <string name="create_profile">Create profile</string>
    <string name="input">Input</string>
    <string name="input_summary">Change input map, screen gamepad, etc.</string>
    <string name="name">Name</string>
    <string name="pref_screen_controllers_title">Screen gamepad layouts</string>
    <string name="pref_default_controller_title">Default screen gamepad layout</string>
    <string name="invalid_name">Invalid name</string>
    <!-- Appearance Settings -->
    <string name="theme">Theme</string>
    <string name="pref_appearance_summary">Set application theme</string>
    <string name="appearance">Appearance</string>
    <string name="theme_device">Device</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>
    <!-- Game Menu -->
    <string name="actions">Actions</string>
    <string name="exit">Exit</string>
    <string name="resume">Resume</string>
    <string name="hacks">Hacks</string>
    <string name="lua_script">Lua script</string>
    <string name="scripts">Scripts</string>
    <string name="file_not_supported">File type isn\'t supported</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="exit_without_saving">Exit without saving</string>
    <string name="exit_without_saving_title_ff">Exit without saving \"%s\"?</string>
    <string name="open_file">Open file</string>
    <string name="create_new">Create new</string>
    <string name="running_ff">Running \"%s\" ...</string>
    <string name="rotate">Rotate</string>
    <!-- Advanced Settings -->
    <string name="advanced_options">Advanced options</string>
    <string name="pref_advanced_summary">Logger, performance statistics, etc.</string>
    <string name="pref_performance_monitor_title">Performance monitor</string>
    <string name="pref_performance_monitor_summary">Show overlay with fps, memory, etc.</string>
    <string name="pref_picture_in_picture_title">Picture In Picture</string>
    <string name="pref_picture_in_picture_summary">Minimize window when placed in the background.</string>
    <string name="graphics">Graphics</string>
    <string name="pref_shader_jit_title">Shader JIT</string>
    <string name="pref_shader_jit_summary">Use shader recompiler.</string>
    <string name="audio">Audio</string>
    <string name="pref_enable_audio_title">Enable Audio</string>
    <string name="pref_enable_audio_desc">Audio will be enabled</string>
    <string name="tools">Tools</string>
    <string name="pref_logger_service_title">Logger</string>
    <string name="pref_logger_service_summary">Store application logs to file.</string>
    <string name="loading">Loading</string>
    <string name="apply">Apply</string>
    <string name="pref_theme_summary">Set application theme</string>
    <string name="pref_theme_title">Application theme</string>
    <string name="failed_load_rom">Failed to load ROM</string>
    <string name="dialog_message_invalid_rom">Make sure it\'s a valid 3DS ROM and that storage permissions are configured properly.</string>
    <string name="system">System</string>
    <string name="general">General</string>
    <string name="pref_general_summary">General application configuration.</string>
    <string name="dual_screen_layouts">Screen layouts</string>
    <string name="dual_screen_layouts_summary">Change layout of console screens.</string>
    <string name="click_to_change">Click to change</string>
    <string name="swap_screen">Swap screen</string>
    <string name="pref_game_folders_summary">Folders for importing games</string>
    <string name="pref_game_folders">Game folders</string>
    <string name="import_folder">Import folder</string>
    <string name="games_count_f">%d Games</string>
    <string name="directory">Directory</string>
    <string name="remove">Remove</string>
    <string name="play">Play</string>
    <!-- Screen layout editor -->
    <string name="fix_aspect">Maintain aspect ratio</string>
    <string name="bottom_display">Bottom Display</string>
    <string name="top_display">Top Display</string>
    <!-- Game about -->
    <string name="region">Region</string>
    <string name="region_north_armerican">North American</string>
    <string name="region_japan">Japan</string>
    <string name="region_europe">Europe</string>
    <string name="region_australia">Australia</string>
    <string name="region_korean">Korean</string>
    <string name="region_taiwan">Taiwan</string>
    <string name="behavior">Behavior</string>
    <string name="invalid_game">Invalid game</string>
    <string name="pref_accurate_shader_title">Accurate shader multiplication</string>
    <string name="pref_accurate_shader_summary">Can improve rendering at a small performance loss</string>
    <string name="pref_game_crypto_keys">Import keys</string>
    <string name="file_imported">%s imported</string>
    <string name="file_available">%s available</string>
    <string name="file_not_available">%s not available</string>
    <string name="pref_game_seed_db_keys">Import SeedDB</string>
    <string name="invalid_file">Invalid file</string>
</resources>
