<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="#F00">

    <Preference
        app:title="@string/app_name"
        app:enabled="false"
        app:summary="1.0"
        app:layout="@layout/preference_simple_about"/>

    <Preference
        app:key="inputMap"
        app:icon="@drawable/ic_key_a"
        app:title="@string/controller_mapping"
        app:summary="@string/pref_input_map_summary"
        app:layout="@layout/preference_start_item"/>

    <Preference
        app:key="appearance"
        app:icon="@drawable/ic_theme"
        app:title="@string/appearance"
        app:summary="@string/pref_appearance_summary"
        app:layout="@layout/preference_start_item"/>

</PreferenceScreen>