<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:divider="@null"
    android:dividerHeight="0dp">
    <item
        android:id="@+id/header_actions"
        android:title="Actions">
      <menu>
          
        <item
            android:id="@+id/resume"
            android:icon="@drawable/ic_shortcut"
            android:title="@string/resume" />
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit"/>

        </menu>
     </item>
     <item
         android:id="@+id/header_others"
         android:title="Others">
      <menu>

            <item
                android:id="@+id/change_orientation"
                android:icon="@drawable/ic_rotate_screen"
                android:title="Rotate" />
            <item
                android:id="@+id/lua_script"
                android:icon="@drawable/ic_code"
                android:title="@string/lua_script" />
     </menu>
  </item>
</menu>
