<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/axis"
        app:iconSpaceReserved="false">

        <Preference
            app:title="@string/up"
            app:key="AXIS_UP"
            app:summary="none"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="@string/down"
            app:key="AXIS_DOWN"
            app:summary="none"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="@string/left"
            app:key="AXIS_LEFT"
            app:summary="none"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="@string/right"
            app:key="AXIS_RIGHT"
            app:summary="none"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Dpad"
        app:iconSpaceReserved="false">

        <Preference
            app:title="@string/up"
            app:key="UP"
            app:summary="none"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="@string/down"
            app:key="DOWN"
            app:summary="none"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="@string/left"
            app:key="LEFT"
            app:summary="none"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="@string/right"
            app:key="RIGHT"
            app:summary="none"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Buttons"
        app:iconSpaceReserved="false">

        <Preference
            app:title="A"
            app:key="A"
            app:summary="none"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="B"
            app:key="B"
            app:summary="none"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="X"
            app:key="X"
            app:summary="none"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="Y"
            app:key="Y"
            app:summary="none"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/others"
        app:iconSpaceReserved="false">

        <Preference
            app:title="L"
            app:key="L"
            app:summary="none"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="R"
            app:key="R"
            app:summary="none"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="Start"
            app:key="START"
            app:summary="none"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="Select"
            app:key="SELECT"
            app:summary="none"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>