<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|top"
    android:padding="10dp"
    android:background="@drawable/alert_dialog_background">

    <View
        android:layout_width="128dp"
        android:layout_height="4dp"
        android:background="?colorSurfaceVariant"
        android:layout_margin="5dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_folder"
        android:tint="?colorOnSurface"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:paddingVertical="5dp"
        android:textSize="20sp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directory"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <TextView
            android:id="@+id/directory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:alpha="0.76"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/games"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:alpha="0.76"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        android:gravity="end|center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            app:icon="@drawable/ic_delete"
            android:textColor="#FFF"
            app:iconTint="#FFF"
            android:layout_marginHorizontal="10dp"
            app:backgroundTint="#CC0000"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@android:string/ok"
            app:icon="@drawable/ic_done"
            android:textColor="?colorOnSurfaceVariant"
            app:iconTint="?colorOnSurfaceVariant"
            app:backgroundTint="?colorSurfaceVariant"/>

    </LinearLayout>

</LinearLayout>